OK-318 Päivitetty JDK versioon 17